# content-score

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
adapters/douyin-session/: cli.py  normalize.py
adapters/douyin-session/tests/: test_cli.py  test_normalize.py
docs/superpowers/plans/: 2026-05-15-content-score-cli-implementation.md  2026-05-15-douyin-adapter-implementation.md
docs/superpowers/specs/: 2026-05-15-content-score-cli-design.md  2026-05-15-douyin-adapter-design.md
skills/content-score/: SKILL.md
skills/content-score/agents/: openai.yaml
skills/content-score/references/: scoring.md
src/: calibration.rs  dimensions.rs  douyin.rs  main.rs  prediction.rs  retro_import.rs  rubric.rs  score.rs  storage.rs  upgrade.rs
tests/: cli_smoke.rs
